feat: Add Ansible deployment configuration and playbooks for excoredum
- Introduced ansible.cfg for Ansible configuration with default settings.
- Created group_vars for shared deployment variables including base directory, installation directory, and workload parameters.
- Added specific group_vars for gateway, load, nodes, read, and verify services with respective configurations.
- Implemented inventory.sh to generate Ansible inventory from Terraform outputs.
- Developed playbooks for deployment, running benchmarks, and verification processes.
- Created systemd service templates for managing excoredum services.
- Removed S3 dependency from Terraform scripts, simplifying the deployment process.
- Updated Gateway and configuration classes to support new response channel for read replicas.